@@ -1,3 +1,11 @@
+2007-10-16  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/AbstractXMLServlet.java: Make maximum number of stored
+	DOMs configurable because the default of 5 isn't enough for applications which
+	are using a lot of frames (which can lead to strange behaviour if the frames
+	require the same DOM but the business logic creates different DOMs on subsequent
+	calls) 
+
 2007-10-09  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java: Check if server 
